--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>	
-	<title>Draw Names</title>
+	<title>SVG Fun</title>
 <!-- Script -->
 	<script src="http://code.jquery.com/jquery-latest.min.js" type="text/javascript"></script>
     <script src="http://ajax.googleapis.com/ajax/libs/jquery/1.10.2/jquery.min.js"></script> 
@@ -11,6 +11,22 @@
     <link rel="stylesheet" type="text/css" href="/css/styles.css">
 </head>
 <body>
-
+<div class="buttons">
+	<button data-add="btn-selector">Click Here</button>
+	<button data-remove="btn-selector">Click Here</button>
+</div>
+<div class="image1Wrapper">
+<svg class="image1" viewBox="0 0 150 150" xmlns="http://www.w3.org/2000/svg">
+  <title>
+    Untitled
+  </title>
+  <g fill="#D8D8D8" fill-rule="evenodd" stroke="#979797">
+    <ellipse class="circle1 svg-image" cx="74.87" cy="74.87" rx="73.87" ry="73.87"/>
+    <path class="square1 svg-image" d="M24 24h102v102H24z"/>
+    <path class="square2 svg-image" d="M24 24h102v102H24z"/>
+  </g>
+</svg>
+</div>
+<script src="js/script.js"></script>
 </body>
 </html>
